fix svg 'loading' being cut off in Chrome browser

--- a/node_server/public/css/styles.css
+++ b/node_server/public/css/styles.css
@@ -204,6 +204,7 @@ h1 {
   mask: url(/img/loading.svg) no-repeat center;
   width: 100%;
   height: 50px;
+  -webkit-mask-size: contain;
   mask-size: contain;
 }
 
